<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/phoneSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/phone_support"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phoneSupportInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/phone_support_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="#7f7fff"
            android:gravity="center_vertical|center|center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/call_now"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/EMGV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/even_more_great_videos"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/EMGVInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/EMGV_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonSubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFD700"
            android:paddingBottom="10dp"
            android:text="@string/subscribe"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="18dp" />
    </LinearLayout>
</ScrollView>