<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/company_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/company_desc"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/company_desc_info_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_desc"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/company_desc_info_1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/company_desc_info_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_desc_info_1"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/company_desc_info_2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/company_desc_info_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_desc_info_2"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/company_desc_info_3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/company_desc_info_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_desc_info_3"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/company_desc_info_4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_survey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_desc_info_4"
            android:layout_centerHorizontal="true"
            android:background="#838383"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Take Survey"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</ScrollView>